[package]
name = "crawlerust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
env_logger = "0.11.1"
html_parser = "0.7.0"
